--- a/catalog-api/package.json
+++ b/catalog-api/package.json
@@ -25,6 +25,7 @@
     "@nestjs/apollo": "^10.1.3",
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
+    "@nestjs/event-emitter": "^1.3.1",
     "@nestjs/graphql": "^10.1.3",
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^7.5.1",
