--- a/catalog-react/package.json
+++ b/catalog-react/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "crosstab": "^0.2.12",
     "graphql": "^16.6.0",
     "graphql-ws": "^5.11.2",
     "react": "^18.2.0",
