--- a/catalog-api/package.json
+++ b/catalog-api/package.json
@@ -27,12 +27,19 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/event-emitter": "^1.3.1",
     "@nestjs/graphql": "^10.1.3",
+    "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^7.5.1",
+    "@types/bcrypt": "^5.0.0",
     "apollo-server-express": "^3.10.2",
+    "bcrypt": "^5.1.0",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "mongoose": "^6.6.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7",
@@ -45,6 +52,8 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/passport-jwt": "^3.0.7",
+    "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
